# microterm

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEV_GUIDE.md  LICENSE  Makefile  README.md  eslint.config.mjs  index.html  next.config.js  package-lock.json  package.json  release-please-config.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-on-tag.yml  ci.yml  release-please.yml  release.yml
.husky/: pre-commit
docs/: AUTOMATED_RELEASE_WORKFLOW.md  GIT_WORKFLOW.md  RELEASE.md  RELEASE_AUTOMATION.md  SCREENSHOTS.md
src/: App.tsx
src-tauri/: ARCHITECTURE.md  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  pty.rs  pty_commands.rs  screen_config.rs  settings.rs  settings_commands.rs  window_commands.rs
src/app/: layout.tsx  page.tsx
src/components/: ErrorBoundary.css.ts  ErrorBoundary.test.tsx  ErrorBoundary.tsx  GridDivider.css.ts  GridDivider.tsx  GridPaneContainer.css.ts  GridPaneContainer.tsx  Onboarding.css.ts  Onboarding.test.tsx  Onboarding.tsx  ResizeHandle.css.ts  ResizeHandle.test.tsx  ResizeHandle.tsx  SearchBar.css.ts  SearchBar.test.tsx  SearchBar.tsx  SettingsPanel.css.ts  SettingsPanel.test.tsx  SettingsPanel.tsx  SplitDivider.css.ts  SplitDivider.test.tsx  SplitDivider.tsx  SplitPaneContainer.css.ts  SplitPaneContainer.tsx  TabBar.css.ts  TabBar.test.tsx  TabBar.tsx  Terminal.tsx  Toast.css.ts  Toast.test.tsx  Toast.tsx  XTerminal.css.ts  XTerminal.tsx
src/components/icons/: GearIcon.test.tsx  GearIcon.tsx  PinIcon.test.tsx  PinIcon.tsx  index.ts
src/contexts/: PaneContext.tsx  TabContext.test.tsx  TabContext.tsx
src/features/terminal/: TerminalView.tsx  styles.css.ts
src/hooks/: index.ts  useCwdPolling.test.ts  useCwdPolling.ts  useDoubleEsc.test.ts  useDoubleEsc.ts  useFontSizeShortcuts.test.tsx  useFontSizeShortcuts.ts  usePaneShortcuts.test.ts  usePaneShortcuts.ts  usePinState.test.tsx  usePinState.ts  usePtySession.test.ts  usePtySession.ts  useScreenSize.test.tsx  useScreenSize.ts  useSettings.test.tsx  useSettings.ts  useTabShortcuts.test.tsx  useTabShortcuts.ts  useTerminalFocus.test.ts  useTerminalFocus.ts  useTerminalInput.test.ts  useTerminalInput.ts  useTerminalInstance.test.ts  useTerminalInstance.ts  useTerminalKeyboard.test.ts  useTerminalKeyboard.ts  useTerminalPty.test.ts  useTerminalPty.ts  useTerminalResize.test.ts  useTerminalResize.ts  useTerminalSearch.test.ts  useTerminalSearch.ts  useToast.test.ts  useToast.ts  useXTermSearch.test.ts  useXTermSearch.ts
src/lib/: constants.ts  guards.test.ts  guards.ts  migrateSettings.test.ts  migrateSettings.ts  paneGrid.ts  paneTree.test.ts  paneTree.ts  pin.test.ts  pin.ts  ptyManager.test.ts  ptyManager.ts  ptyUtils.test.ts  ptyUtils.ts  settings.test.ts  settings.ts  tauri.ts  terminalAddons.test.ts  terminalAddons.ts  terminalKeyHandlers.test.ts  terminalKeyHandlers.ts
src/lib/pty/: index.ts  session.test.ts  session.ts  usePtySession.test.tsx  usePtySession.ts
src/lib/tauri/: commands.test.ts  commands.ts  index.ts  preload.ts  pty.test.ts  pty.ts  settings.test.ts  settings.ts  shell.test.ts  shell.ts  shortcuts.test.ts  shortcuts.ts  window.test.ts  window.ts
src/lib/terminal/: dataBuffer.test.ts  dataBuffer.ts  theme.test.ts  theme.ts
src/styles/: animations.css.ts  global.css.ts  globals.css  xterm-overrides.css
src/test/: setup.ts
src/types/: css.d.ts
