[package]
name = "menubar-terminal"
version = "1.0.0"
description = "A macOS menubar terminal application"
authors = ["µTerm Contributors"]
license = "MIT"
repository = "https://github.com/ttaatoo/menubar-terminal"
homepage = "https://github.com/ttaatoo/menubar-terminal"
readme = "../README.md"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "menubar_terminal"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-autostart = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
portable-pty = "0.8"
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "objc2-core-foundation"] }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSEvent", "NSRunningApplication", "block2"] }
block2 = "0.6"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
