[package]
name = "microterm"
version = "1.5.1"
description = "A macOS menubar terminal application"
authors = ["µTerm Contributors"]
license = "MIT"
repository = "https://github.com/ttaatoo/microterm"
homepage = "https://github.com/ttaatoo/microterm"
readme = "../README.md"
edition = "2021"
rust-version = "1.92"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "microterm"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [
  "tray-icon",
  "macos-private-api",
  "devtools",
] }
tauri-plugin-shell = "2.3.4"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-autostart = "2.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "io-util", "process"] }
portable-pty = "0.8"
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
  "NSGeometry",
  "objc2-core-foundation",
] }
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }
objc2-app-kit = { version = "0.3", features = [
  "NSWindow",
  "NSEvent",
  "NSRunningApplication",
  "NSScreen",
  "block2",
] }
objc2-core-graphics = { version = "0.3", features = [
  "CGEventTypes",
  "CGDirectDisplay",
  "CGError",
  "CGGeometry",
] }
block2 = "0.6"

[dev-dependencies]
tempfile = "3.8"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
